# my_avito

./: db.sqlite3  pyproject.toml
ads/: models.py  urls.py  views.py
ads/migrations/: 0001_initial.py
data/: csv_to_json.py
my_avito/: settings.py  urls.py
