[tool.poetry]
name = "poetry add django"
version = "0.1.0"
description = ""
authors = ["KaterinaLyashenko <104565099+KaterinaLyashenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
